fix: scrollbar  with playwirght

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -63,9 +63,14 @@
   }
 }
 
+body {
+  margin: 0;
+  overflow: hidden;
+}
+
 #root {
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -84,10 +89,6 @@
   display: flex;
   flex: 1;
   overflow: hidden;
-}
-
-body {
-  margin: 0;
 }
 
 h1,
